Improve menu window activation and DMG workflow

--- a/.github/workflows/build-dmg.yml
+++ b/.github/workflows/build-dmg.yml
@@ -26,7 +26,11 @@ jobs:
             -project Recurra/Recurra.xcodeproj \
             -scheme Recurra \
             -configuration Release \
+            -destination 'platform=macOS,arch=arm64' \
             -derivedDataPath build \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO \
             build
 
       - name: Prepare app bundle
