--- a/Recurra/Recurra/Info.plist
+++ b/Recurra/Recurra/Info.plist
@@ -22,6 +22,8 @@
     <string>13.0</string>
     <key>NSAppleEventsUsageDescription</key>
     <string>This app requires permission to control your Mac in order to replay recorded actions.</string>
+    <key>NSAccessibilityUsageDescription</key>
+    <string>Recurra needs Accessibility access to observe and replay input events as macros.</string>
     <key>NSInputMonitoringUsageDescription</key>
     <string>This app records keyboard and mouse input to build macros for playback.</string>
     <key>NSPrincipalClass</key>
