--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,13 +83,27 @@ jobs:
       with:
         xcode-version: latest-stable
         
+    - name: Detect test targets
+      id: detect-tests
+      run: |
+        if grep -q 'com.apple.product-type.bundle.unit-test' Recurra/Recurra.xcodeproj/project.pbxproj; then
+          echo "has_tests=true" >> "$GITHUB_OUTPUT"
+        else
+          echo "has_tests=false" >> "$GITHUB_OUTPUT"
+        fi
+
     - name: Run tests
+      if: steps.detect-tests.outputs.has_tests == 'true'
       run: |
         cd Recurra
         xcodebuild test \
           -project Recurra.xcodeproj \
           -scheme Recurra \
           -destination "platform=macOS"
+
+    - name: Skip tests (no test targets)
+      if: steps.detect-tests.outputs.has_tests != 'true'
+      run: echo "No test targets detected; skipping xcodebuild test."
           
   lint:
     runs-on: macos-latest
@@ -110,4 +124,4 @@ jobs:
     - name: Run SwiftLint
       run: |
         cd Recurra/Recurra
-        swiftlint lint --reporter github
+        swiftlint lint --reporter xcode
