--- a/Recurra/Recurra/Info.plist
+++ b/Recurra/Recurra/Info.plist
@@ -30,5 +30,14 @@
 	<string>This app records keyboard and mouse input to build macros for playback.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSHighResolutionCapable</key>
+	<true/>
+	<key>NSRequiresAquaSystemAppearance</key>
+	<false/>
 </dict>
 </plist>
